--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script src="table.js" type="module"></script>
     <script src="powerchart.js" type="module"></script>
     <script src="pfchart.js" type="module"></script>
-    <title>Document</title>
+    <title>Home</title>
 </head>
 <body>
     <div id="mySidenav" class="sidenav">
